[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "neurokit2"
dynamic = ["version"]
description = "The Python Toolbox for Neurophysiological Signal Processing."
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [
    {name = "Dominique Makowski", email = "D.Makowski@sussex.ac.uk"},
    {name = "Tam Pham"},
    {name = "Zen Juen Lau"},
    {name = "Jan C. Brammer"},
    {name = "François Lespinasse"}
]
keywords = ["NeuroKit2", "physiology", "bodily signals", "Python", "ECG", "EDA", "EMG", "PPG"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

dependencies = [
    "requests",
    "numpy>=2.0.0",
    "pandas<3.0.0",
    "scipy",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "PyWavelets>=1.4.0",
]

[project.optional-dependencies]
full = [
    "bioread",
    "joblib",
    "pyxdf",
    "opencv-python",
    "pillow",
    "tabulate",
    "PyEMD",
    "menpo",
    "menpodetect",
    "pyrqa",
    "mne",
    "plotly",
    "ts2vg",
    "cvxopt",
]

[dependency-groups]
# Dependencies for running tests
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "coverage",
    "codecov",
    "pyentrp",
    "antropy",
    "EntropyHub",
    "nolds<=0.6.2",
    "biosppy==0.6.1",
    "cvxopt",
    "EMD-signal",
    "numba>=0.61.0",
    "llvmlite>=0.44.0",
    "astropy",
    "wfdb",
    "neurokit2[full]",
]

# Dependencies for building documentation
docs = [
    "sphinx",
    "sphinx-book-theme",
    "sphinxemoji",
    "sphinx-copybutton",
    "ipykernel",
    "ipython",
    "myst-parser",
    "myst-nb",
    "seaborn",
    "pickleshare",
    "neurokit2[full]",
    { include-group = "test" },
]

# General development tools
dev = [
    "invoke",
    "bumpversion",
    "sphinx",
    "twine",
    "tox",
    "tox-uv",
    "ruff",
    "pre-commit",
    "yapf",
    "neurokit2[full]",
    { include-group = "docs" },
    { include-group = "test" },
]

[project.urls]
Homepage = "https://github.com/neuropsychology/NeuroKit"
Repository = "https://github.com/neuropsychology/NeuroKit"
Documentation = "https://neuropsychology.github.io/NeuroKit/"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["neurokit2"]

[tool.hatch.build.hooks.vcs]
version-file = "neurokit2/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.direnv",
  "/.venv*",
  "/.tox",
  "/.pytest_cache",
  "/.python_cache",
  "/.coverage",
  "/coverage.xml",
  "/data",
  "/flake.nix",
  "/flake.lock",
  "tests/",
  "docs/"
]

[tool.uv]
managed = true
package = true
python-downloads = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["tests_*.py"]
python_functions = ["test_*"]
addopts = """
    -n auto
    --doctest-modules
    --doctest-glob='*.py'
    --cov=neurokit2
    --cov-append
    --cov-report=xml
    -v
"""
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

[tool.tox]
env_list = ["py310", "py311", "py312", "py313", "py314"]
requires = ["tox-uv>=1.22.2"]

[tool.tox.env_run_base]
runner = "uv-venv-runner"
base_python = ["{env_name}"]
dependency_groups = ["dev"]
extras = ["full"]
passenv = ["LD_LIBRARY_PATH"]
commands = [
    [
        "{envbindir}/pytest",
        "-v",
        "--dist", "loadscope",
        "neurokit2",
        "tests"
    ]
]


# Style
[tool.ruff]
line-length = 127
target-version = "py310"

# Why was this excluded before in style workflow?
extend-exclude = ["neurokit2/complexity/__init__.py"]

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes, I = isort, UP = pyupgrade, PL = pylint
select = ["E", "W", "F", "I", "UP", "PL"]
ignore = [
    "E712",    # Allow 'if x == True'
    "C901",    # Ignore complexity (neuroscience code is naturally complex)
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments (limit bumped to 10 below)
    "PLR0915", # Too many statements
    "PLR0914", # Too many local variables
    "PLC0415", # Allow imports inside functions (useful for heavy optional dependencies)
]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["neurokit2"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
